--- a/OmicronforAutoSteel/MainWindow.xaml
+++ b/OmicronforAutoSteel/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="OmicronforAutoSteel.MainWindow"
+﻿<control:MetroWindow x:Class="OmicronforAutoSteel.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:control="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:mvvm="clr-namespace:BingLibrary.hjb;assembly=BingLibrary"
         xmlns:local="clr-namespace:OmicronforAutoSteel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="OmicronforAutoSteel" WindowStartupLocation="CenterScreen"
+                     BorderThickness="0" GlowBrush="Black"  ResizeMode="CanResizeWithGrip" WindowTransitionsEnabled="True"
+                     Icon="/icons/Devices_computer_64px_1187133_easyicon.net.ico" Height="600" Width="800" DataContext="{mvvm:Data md}">
     <Grid>
-        
+        <TextBlock Text="{Binding Text}"></TextBlock>
     </Grid>
-</Window>
+</control:MetroWindow>
