--- a/OmicronforAutoSteel/HomePage.xaml
+++ b/OmicronforAutoSteel/HomePage.xaml
@@ -126,7 +126,10 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Button Grid.Column="0" Grid.Row="0" Style="{StaticResource OperationButton}" Content="启动" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="1"></Button>
+            <Button Grid.Column="0" Grid.Row="0" Style="{StaticResource OperationButton}" Content="启动" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="1" IsEnabled="{Binding IsRobotReady}"></Button>
+            <Button Grid.Column="1" Grid.Row="0" Style="{StaticResource OperationButton}" Content="暂停" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="2"></Button>
+            <Button Grid.Column="2" Grid.Row="0" Style="{StaticResource OperationButton}" Content="继续" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="3"></Button>
+            <Button Grid.Column="3" Grid.Row="0" Style="{StaticResource OperationButton}" Content="重启" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="4"></Button>
             <Button Grid.Column="3" Grid.Row="3" Style="{StaticResource OperationButton}" Content="测试" Command="{mvvm:ActionAuto FunctionTest}"></Button>
         </Grid>
     </Grid>
