--- a/OmicronforAutoSteel/HomePage.xaml
+++ b/OmicronforAutoSteel/HomePage.xaml
@@ -130,7 +130,13 @@
             <Button Grid.Column="1" Grid.Row="0" Style="{StaticResource OperationButton}" Content="暂停" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="2"></Button>
             <Button Grid.Column="2" Grid.Row="0" Style="{StaticResource OperationButton}" Content="继续" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="3"></Button>
             <Button Grid.Column="3" Grid.Row="0" Style="{StaticResource OperationButton}" Content="重启" Command="{mvvm:ActionAutoWithParam EpsonOpetate}" CommandParameter="4"></Button>
-            <Button Grid.Column="3" Grid.Row="3" Style="{StaticResource OperationButton}" Content="测试" Command="{mvvm:ActionAuto FunctionTest}"></Button>
+            <!--<Button Grid.Column="3" Grid.Row="3" Style="{StaticResource OperationButton}" Content="测试" Command="{mvvm:ActionAuto FunctionTest}"></Button>-->
+            <Button Grid.Column="0" Background="Orange" Grid.Row="1" Style="{StaticResource OperationButton}" Content="PCB&#13;上料" PreviewMouseDown="{mvvm:ActionAuto PCBLoadMouseDown}" PreviewMouseUp="{mvvm:ActionAuto PCBLoadMouseUp}"></Button>
+            <Button Grid.Column="1" Background="Brown" Grid.Row="1" Style="{StaticResource OperationButton}" Content="膜&#13;上料" PreviewMouseDown="{mvvm:ActionAuto MoLoadMouseDown}" PreviewMouseUp="{mvvm:ActionAuto MoLoadMouseUp}"></Button>
+            <Button Grid.Column="2" Background="SteelBlue" Grid.Row="1" Style="{StaticResource OperationButton}" Content="钢片&#13;上料" PreviewMouseDown="{mvvm:ActionAuto GPLoadMouseDown}" PreviewMouseUp="{mvvm:ActionAuto GPLoadMouseUp}"></Button>
+            <Button Grid.Column="3" Background="SteelBlue" Grid.Row="1" Style="{StaticResource OperationButton}" Content="钢片&#13;空盘" PreviewMouseDown="{mvvm:ActionAuto GPUnLoadMouseDown}" PreviewMouseUp="{mvvm:ActionAuto GPUnLoadMouseUp}"></Button>
+            <Button Grid.Column="0" Background="Orange" Grid.Row="2" Style="{StaticResource OperationButton}" Content="PCB&#13;下料" PreviewMouseDown="{mvvm:ActionAuto PCBUnLoadMouseDown}" PreviewMouseUp="{mvvm:ActionAuto PCBUnLoadMouseUp}"></Button>
+            <Button Grid.Column="2" Background="Red" Grid.Row="2" Style="{StaticResource OperationButton}" Content="钢片&#13;退料" PreviewMouseDown="{mvvm:ActionAuto GPDownMouseDown}" PreviewMouseUp="{mvvm:ActionAuto GPDownMouseUp}"></Button>
         </Grid>
     </Grid>
     
