--- a/OmicronforAutoSteel/MainWindow.xaml
+++ b/OmicronforAutoSteel/MainWindow.xaml
@@ -25,16 +25,19 @@
         </Grid.RowDefinitions>
         <Menu VerticalAlignment="Center">
             <MenuItem Header="主页" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="0"></MenuItem>
-            <MenuItem Header="参数" Style="{StaticResource MenuItem1}">
-                <MenuItem Header="IP" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="1"></MenuItem>
-                <MenuItem Header="补偿" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="3"></MenuItem>
+            <MenuItem Header="参数" IsEnabled="{Binding IsLogin}" Style="{StaticResource MenuItem1}">
+                <MenuItem Header="IP" Style="{StaticResource MenuItem1}" IsEnabled="{Binding IsLogin}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="1"></MenuItem>
+                <MenuItem Header="补偿" IsEnabled="{Binding IsLogin}" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="3"></MenuItem>
             </MenuItem>
             <MenuItem Header="相机" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="2"></MenuItem>
+            <MenuItem Header="帮助" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="5"></MenuItem>
+            <MenuItem Header="登录" Style="{StaticResource MenuItem1}" Command="{mvvm:ActionAutoWithParam ChoosePage}" CommandParameter="4"></MenuItem>
         </Menu>
         <local:HomePage Grid.Row="1" Visibility="{Binding HomePageVisibility,FallbackValue=Visible}"></local:HomePage>
         <local:ParameterPage Grid.Row="1" Visibility="{Binding ParameterPageVisibility,FallbackValue=Collapsed}"></local:ParameterPage>
         <local:CameraPage Grid.Row="1" Visibility="{Binding CameraPageVisibility,FallbackValue=Collapsed}"></local:CameraPage>
         <local:ParameterPage1 Grid.Row="1" Visibility="{Binding ParameterPage1Visibility,FallbackValue=Collapsed}"></local:ParameterPage1>
+        <local:HelpView Grid.Row="1" Visibility="{Binding HelpPageVisibility,FallbackValue=Collapsed}"></local:HelpView>
         <StatusBar Grid.Row="2">
             <StatusBarItem>
                 <TextBlock>PLC</TextBlock>
